--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -14,7 +14,7 @@ extends:
 rules:
   camelcase: error
   comma-dangle: [error, always-multiline]
-  curly: [error, multi-or-nest]
+  # curly: [error, multi-or-nest]
   eol-last: error
   id-match: error
   new-parens: error
@@ -53,6 +53,8 @@ rules:
   # @typescript-eslint related
   space-before-function-paren: "off"
   "@typescript-eslint/explicit-function-return-type": "off"
+  "@typescript-eslint/no-empty-interface": "off"
+  "@typescript-eslint/no-use-before-define": "off"
   "@typescript-eslint/consistent-type-assertions": error
   "@typescript-eslint/no-floating-promises": error
   "@typescript-eslint/no-misused-new": error
