--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -26,6 +26,7 @@
     "prepublishOnly": "yarn build"
   },
   "devDependencies": {
+    "@types/clone": "^0.1.30",
     "@types/jest": "^25.2.1",
     "@types/node": "^13.13.0",
     "coveralls": "^3.0.2",
@@ -34,5 +35,8 @@
     "ts-jest": "^25.4.0",
     "ts-node": "^8.8.2",
     "typescript": "^3.0.3"
+  },
+  "dependencies": {
+    "clone": "^2.1.2"
   }
 }
