chore(package.json): add author

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -7,6 +7,10 @@
   "files": [
     "dist/*"
   ],
+  "author": {
+    "name": "Zura Benashvili",
+    "email": "zura.benashvili@gmail.com"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/binier/dgraphium.git",
