--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "private": true,
   "name": "dgraphium",
   "license": "MIT",
+  "author": {
+    "name": "Zura Benashvili",
+    "email": "zura.benashvili@gmail.com"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/binier/dgraphium.git"
