--- a/lerna.json
+++ b/lerna.json
@@ -7,7 +7,7 @@
   ],
   "command": {
     "publish": {
-      "message": "chore(release): publish %s",
+      "message": "chore(release): publish",
       "registry": "https://npm.pkg.github.com",
       "conventionalCommits": true,
       "allowBranch": "master",
