--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@dgraphium/*": ["packages/*/src"]
+      "@dgraphium/core/*": ["packages/core/src/*"],
+      "@dgraphium/client/*": ["packages/client/src/*"]
     }
   }
 }
