--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ cache:
 before_install:
   - curl -o- -L https://yarnpkg.com/install.sh | bash
   - if [ "$TRAVIS_OS_NAME" = "windows" ]; then choco install make; fi
-  - yarn run lerna run prepublish
+  - yarn lerna run prepublish
 script:
   - yarn lint
   - yarn test
