chore(core/tsconfig): stripInternal

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -16,7 +16,8 @@
     "noImplicitReturns": true,
     "noUnusedLocals": true,
     "resolveJsonModule": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "stripInternal": true
   },
   "exclude": [
     "dist",
