--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -52,7 +52,5 @@
     "ts-node": "^8.8.2",
     "typescript": "^3.0.3"
   },
-  "dependencies": {
-    "clone": "^2.1.2"
-  }
+  "dependencies": {}
 }
